# buildahBuilder

./: .gitignore  Readme.md  bdeBuild  bdeEnter  pde  pdeBuild  pdeDelete  pdeEnter  pdeStart  pyproject.toml  setup  setup.cfg
docs/architecture/: Readme.md
examples/cekitModules/base/: installBase.sh  module.yaml
examples/cekitModules/docTool/: installDocTool.sh  module.yaml
examples/cekitModules/gccLang/: codeDocServer  installGccLang.sh  module.yaml  setupGccLang.sh
examples/cekitModules/goLang/: finalizeGoLang.sh  installGoLang.sh  module.yaml
examples/cekitModules/lua/: installLua.sh  lua.luaCJson.patch  module.yaml
examples/cekitModules/micro/: installMicro.sh
examples/cekitModules/nodeJS/: installNodeJS.sh  module.yaml
examples/gccLua/: Readme.md  config.yaml  image.yaml  override-arm64.yaml  pde.yaml
examples/goLua/: Readme.md  image.yaml  override-aarch64.yaml  pde.yaml
pde/: __init__.py  build.py  config.py  create.py  destroy.py  enter.py  lists.py  remove.py  run.py  start.py  startRun.py  stop.py
pdeCmds/: __init__.py  build.py  config.py  create.py  destroy.py  enter.py  remove.py  start.py  stop.py
pdeModules/gccLang/: module.yaml
pdeModules/lua/: installLua.sh  lua.lua.patch  module.yaml
pdeModules/micro/: module.yaml
scripts/: installEditablePdeCommand
shellCompletionScripts/: Readme.md  pde-bash-completion.sh  pde-fish-completion.fish  pde-zsh-completion.sh
